# MoVer

./: .gitignore  README.md  pyproject.toml  requirements.txt  tutorial.ipynb
.github/workflows/: release.yml
docs/: 0712_development_and_release_workflow.md  0715_mover_0_3_0_release_notes.md
examples/: render_session_demo.py  teaser_hi.html  teaser_hi.py  teaser_hi_data.json  translate_right.html  translate_right.py  translate_right_data.json  two_black_squares.html  two_black_squares.py  two_black_squares_data.json
examples/configs/: config_starter.yaml  config_teaser.yaml
examples/prompts/: prompts_starter.json  prompts_teaser.json
mover_dataset/: create_dataset.py  dataset_scene_graphs.py  mover_prompts_atomic_12_100.json  mover_prompts_spatial_14_100.json  mover_prompts_spatial_temporal_18_100.json  mover_prompts_temporal_12_100.json
src/mover/: _optional.py  config.py  pipeline.py  stats.py
src/mover/_vendor/: __init__.py
src/mover/_vendor/concepts/: VENDORED.md  __init__.py
src/mover/_vendor/concepts/dsl/: all.py  constraint.py  dsl_domain.py  dsl_functions.py  dsl_types.py  expression.py  expression_utils.py  expression_visitor.py  function_domain.py  tensor_state.py  tensor_value.py  tensor_value_utils.py  value.py
src/mover/_vendor/concepts/dsl/executors/: executor_base.py  function_domain_executor.py  tensor_value_eager_executor.py  tensor_value_executor.py  value_quantizers.py
src/mover/_vendor/concepts/dsl/learning/: function_domain_search.py
src/mover/_vendor/concepts/dsl/parsers/: fol_python_parser.py  function_expression_parser.py  parser_base.py
src/mover/_vendor/torch_index/: VENDORED.md
src/mover/composers/: animation_composer.py  mover_composer.py
src/mover/composers/assets/: template_animation.md  template_animation_allow_gsap.md  template_mover.md
src/mover/converter/: mover_converter.py  mover_querier.py  raster_capture.py  render_session.py
src/mover/converter/assets/: api.js  convert.js  index.css  property_registry.json  vis.js
src/mover/dsl/: fol_domain.py  fol_executor.py  fol_parser.py  mover_verifier.py  transform_types.py
src/mover/nlg/: prompt_generator.py  utils.py
src/mover/nlg/sentence_generation/: sentence_composer.py  sentence_unit.py  vocab.py
src/mover/synthesizers/: animation_synthesizer.py  base_synthesizer.py  llm_client.py
src/mover/synthesizers/assets/: sys_msg_animation_synthesizer.md  sys_msg_animation_synthesizer_with_implementation.md
tests/: check_release_artifacts.py  release_profile_smoke.py  test_animation_prompt_assets.py  test_converter_capture.py  test_converter_dom.py  test_converter_timeline.py  test_mover_querier.py  test_mover_synthesizer.py  test_render_session.py  test_svgpt_keyframes.py  test_transform_types.py
